# logging-library

./: README.md
loggerLib/: CMakeLists.txt
loggerLib/include/: logger.hpp
loggerLib/src/: logger.cpp
logger_app/: CMakeLists.txt
logger_app/Cfg/: logger_config.json
logger_app/src/: logger_app.cpp
